--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <body>
 
     <header>
-        <img src="logo/images-removebg-preview.png" alt="Safai Mitra Logo">
+        <img src="images-removebg-preview.png" alt="Safai Mitra Logo">
         <span>Safai-Mitra</span>
     </header>
 
